--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build01.data.gz",
-        frameworkUrl: buildUrl + "/Build01.framework.js.gz",
-        codeUrl: buildUrl + "/Build01.wasm.gz",
+        dataUrl: buildUrl + "/Build01.data",
+        frameworkUrl: buildUrl + "/Build01.framework.js",
+        codeUrl: buildUrl + "/Build01.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DS_NPC_Spawner",
